Cambios en los patrones creacionales e insercion de data en el main